Increase permgen used by integration tests